; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_get_hierarchy_data_from_tree_item.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_get_hierarchy_data_from_tree_item.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hierarchy_data = type { i32 }
%struct.TYPE_2__ = type { i64, i32*, i32 }

@TVM_GETNEXTITEM = common dso_local global i32 0, align 4
@TVGN_PARENT = common dso_local global i32 0, align 4
@TVIF_PARAM = common dso_local global i32 0, align 4
@TVM_GETITEMW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.hierarchy_data* (i32, i32*)* @get_hierarchy_data_from_tree_item to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.hierarchy_data* @get_hierarchy_data_from_tree_item(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.hierarchy_data*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_2__, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  store %struct.hierarchy_data* null, %struct.hierarchy_data** %5, align 8
  store i32* null, i32** %6, align 8
  br label %9

9:                                                ; preds = %24, %2
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @TVM_GETNEXTITEM, align 4
  %12 = load i32, i32* @TVGN_PARENT, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = ptrtoint i32* %13 to i32
  %15 = call i32 @SendMessageW(i32 %10, i32 %11, i32 %12, i32 %14)
  %16 = sext i32 %15 to i64
  %17 = inttoptr i64 %16 to i32*
  store i32* %17, i32** %7, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = icmp ne i32* %18, null
  br i1 %19, label %22, label %20

20:                                               ; preds = %9
  %21 = load i32*, i32** %4, align 8
  store i32* %21, i32** %6, align 8
  br label %22

22:                                               ; preds = %20, %9
  %23 = load i32*, i32** %7, align 8
  store i32* %23, i32** %4, align 8
  br label %24

24:                                               ; preds = %22
  %25 = load i32*, i32** %4, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %9, label %27

27:                                               ; preds = %24
  %28 = load i32*, i32** %6, align 8
  %29 = icmp ne i32* %28, null
  br i1 %29, label %30, label %42

30:                                               ; preds = %27
  %31 = load i32, i32* @TVIF_PARAM, align 4
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 2
  store i32 %31, i32* %32, align 8
  %33 = load i32*, i32** %6, align 8
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 1
  store i32* %33, i32** %34, align 8
  %35 = load i32, i32* %3, align 4
  %36 = load i32, i32* @TVM_GETITEMW, align 4
  %37 = ptrtoint %struct.TYPE_2__* %8 to i32
  %38 = call i32 @SendMessageW(i32 %35, i32 %36, i32 0, i32 %37)
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = inttoptr i64 %40 to %struct.hierarchy_data*
  store %struct.hierarchy_data* %41, %struct.hierarchy_data** %5, align 8
  br label %42

42:                                               ; preds = %30, %27
  %43 = load %struct.hierarchy_data*, %struct.hierarchy_data** %5, align 8
  ret %struct.hierarchy_data* %43
}

declare dso_local i32 @SendMessageW(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
